# WindWakerDebugMenu

./: .gitmodules  Cargo.toml  LICENSE  README.md  RomHack.toml
font-exporter/: Cargo.toml
font-exporter/src/: main.rs
res/: font1
src/: cheat_menu.rs  lib.rs  memory.rs  print.rs  statics.rs  utils.rs
src/inventory_menu/: amounts.rs  main.rs
