[package]
name = "rom_hack"
version = "0.1.0"
authors = ["Christopher Serr <cryze92@gmail.com>"]
edition = "2018"

[lib]
name = "rust"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[dependencies]
libtww = { git = "https://github.com/CryZe/libtww-core", features = ["alloc"] }
gcn = { git = "https://github.com/CryZe/gcn", features = ["panic", "serialize"] }
gcn-fonts = { git = "https://github.com/hallcristobal/gcn-fonts" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
